--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=development nodemon src/index.js",
-    "migrate": "knex migrate:latest --knexfile src/db/knexfile.js",
-    "seed": "knex seed:run --knexfile src/db/knexfile.js",
+    "start": "nodemon src/index.js",
+    "migrate": "node -r dotenv/config node_modules/knex/bin/cli.js migrate:latest --knexfile src/db/knexfile.js --env production",
+    "seed": "node -r dotenv/config node_modules/knex/bin/cli.js seed:run --knexfile src/db/knexfile.js --env production",
     "rollback": "knex migrate:rollback --knexfile src/db/knexfile.js"
   },
   "keywords": [],
