--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "nodemon src/index.js",
     "migrate": "node -r dotenv/config node_modules/knex/bin/cli.js migrate:latest --knexfile src/db/knexfile.js --env production",
-    "seed": "node -r dotenv/config node_modules/knex/bin/cli.js seed:run --knexfile src/db/knexfile.js --env production",
-    "rollback": "knex migrate:rollback --knexfile src/db/knexfile.js"
+    "seed": "node -r dotenv/config node_modules/knex/bin/cli.js seed:run --specific=01_seed_samples.js --knexfile src/db/knexfile.js --env production",
+    "rollback": "node -r dotenv/config node_modules/knex/bin/cli.js migrate:rollback --knexfile src/db/knexfile.js --env production"
   },
   "keywords": [],
   "author": "",
