--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "knexjs-tutorial",
+  "name": "skating-program-music-db",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
